CKAD/Exam/KodeKloud/ultimate-certified-kubernetes-application-developer-ckad-mock-exam-series/exam-2/Q10/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ckad-svcn
  namespace: app-ckad
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
