CKAD/Exam/KodeKloud/ultimate-certified-kubernetes-application-developer-ckad-mock-exam-series/exam-2/Q10/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ckad-svcn
  namespace: app-ckad
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31100
